<resources>
    <string name="app_name">Dave Express</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="btn_lbl_googlesignin">SIGN IN WITH GOOGLE</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="register_success">You are registered successfully.</string>
    <string name="register_google_success">Signed in successfully.</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_sale_yes">YES</string>
    <string name="rb_lbl_sale_no">NO</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="rb_lbl_shoes">SHOES</string>
    <string name="rb_lbl_shirts">SHIRTS</string>
    <string name="rb_lbl_shorts">SHORTS</string>
    <string name="rb_lbl_trousers">TROUSERS</string>
    <string name="rb_lbl_hoodies">HOODIES</string>
    <string name="rb_lbl_twopiece">TWO PIECE</string>
    <string name="rb_lbl_other_category">OTHER CATEGORY</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="shoes_button_clicked">Shoes button clicked.</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="btn_about_us">ABOUT US</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="action_add_product">Add Product</string>
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="title_outofstock">OUT OF STOCK</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price (₦)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="et_hint_available_shoesizes">Available shoe sizes (E.g. 38, 39, 40, 41)</string>
    <string name="et_hint_available_shirtsizes">Available shirt sizes (E.g. X, XL, XXL)</string>
    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_shipping_lagos">Please enter shipping fee for Lagos.</string>
    <string name="err_msg_shipping_delta">Please enter shipping fee for Delta.</string>
    <string name="err_msg_shipping_abuja">Please enter shipping fee for Abuja.</string>
    <string name="err_msg_shipping_bayelsa">Please enter shipping fee for Bayelsa.</string>
    <string name="err_msg_shipping_enugu">Please enter shipping fee for Enugu.</string>
    <string name="err_msg_shipping_edo">Please enter shipping fee for Edo.</string>
    <string name="err_msg_shipping_anambra">Please enter shipping fee for Anambra.</string>
    <string name="err_msg_shipping_others">Please enter shipping fee for Others.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="err_msg_enter_available_shoesizes">Please enter the available shoe sizes.</string>
    <string name="err_msg_enter_available_sizes">Please enter available sizes.</string>
    <string name="err_msg_enter_available_shirtsizes">Please enter the available shirt sizes.</string>
    <string name="err_msg_enter_salesprice">Please enter sales price.</string>
    <string name="err_msg_no_running_sales">No ongoing sales on this product.</string>
    <string name="product_uploaded_success_message">Your product is uploaded successfully.</string>
    <string name="shippingfee_uploaded_success_message">Shipping fees added successfully.</string>
    <string name="shippingfee_updated_success_message">Shipping fees updated successfully.</string>
    <string name="cardsave_success_message">Your card has been saved successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="something_went_wrong">No Connection. \n Please check your internet connection and try again.</string>
    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="welcome">Welcome to Dave Express. \n Happy Shopping!</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_availablesize_description">Available Sizes</string>
    <string name="lbl_chooseasize">Choose a size</string>
    <string name="lbl_selectasize">Select a size</string>
    <string name="lbl_sales_heading">Is this product on Sale?</string>
    <string name="lbl_OS_heading">See products that are running low or out of stock.</string>
    <string name="lbl_sales_price_heading">Enter the sales price for this product</string>
    <string name="size_instruction">Only enter a size that is among the available sizes</string>
    <string name="sales_price_instruction">Sales Price</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="success_message_item_added_to_cart">Product is added to your cart.</string>
    <string name="success_salesprice">Updated successfully.</string>
    <string name="success_saleremove">Sales has been stopped.</string>
    <string name="success_percentageOff">Percentage off has been calculated successfully.</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>
    <string name="btn_lbl_go_to_os">GO TO O/S (OUT OF STOCK)</string>
    <string name="btn_lbl_submit_saleprice">SUBMIT SALE PRICE</string>
    <string name="btn_lbl_stopsales">STOP SALES</string>
    <string name="btn_update_orderstatus">UPDATE</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>
    <string name="err_your_address_added_successfully">Your address is added successfully.</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>
    <string name="err_your_address_deleted_successfully">Your address was deleted successfully.</string>
    <string name="your_address_updated_successfully">Your address was updated successfully.</string>
    <string name="title_select_address">SELECT ADDRESS</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_card_payment">Debit or Credit Card</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">No orders placed yet!</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>
</resources>