<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.AddProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_product_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_add_product"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_product_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_product_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_product_header_image_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorImageViewBackground"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_add_update_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:contentDescription="@string/content_description"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/add_update_product_icon_padding"
                    android:src="@drawable/ic_vector_add_photo" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_title"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_product_title"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_product_image">

                <com.example.daveexpress.utils.MSPEditText
                    android:id="@+id/et_product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_price"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_product_price"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_product_title">

                <com.example.daveexpress.utils.MSPEditText
                    android:id="@+id/et_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_description"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_product_description"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_product_price">

                <com.example.daveexpress.utils.MSPEditText
                    android:id="@+id/et_product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_product_quantity"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_product_quantity"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_product_description">

                <com.example.daveexpress.utils.MSPEditText
                    android:id="@+id/et_product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.daveexpress.utils.MSPTextViewBold
                android:id="@+id/category_tv"
                android:layout_width="188dp"
                android:layout_height="27dp"
                android:layout_marginStart="31dp"
                android:layout_marginTop="0dp"
                android:text="Choose a category"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/et_textSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_product_quantity" />

            <RadioGroup
                android:id="@+id/rg_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_tv">

                    <com.example.daveexpress.utils.MSPRadioButton
                        android:id="@+id/rb_shoes"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        android:background="@drawable/drawable_gender_tab_selector"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/rb_lbl_shoes"
                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                        android:textStyle="bold"/>

                    <com.example.daveexpress.utils.MSPRadioButton
                        android:id="@+id/rb_shirts"
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
                        android:layout_weight="0"
                        android:background="@drawable/drawable_gender_tab_selector"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/rb_lbl_shirts"
                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                        android:textStyle="bold"/>

                    <com.example.daveexpress.utils.MSPRadioButton
                        android:id="@+id/rb_trousers"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
                        android:layout_weight="0"
                        android:background="@drawable/drawable_gender_tab_selector"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/rb_lbl_trousers"
                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                        android:textStyle="bold"/>

                    <com.example.daveexpress.utils.MSPRadioButton
                        android:id="@+id/rb_hoodies"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
                        android:layout_weight="0"
                        android:background="@drawable/drawable_gender_tab_selector"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/rb_lbl_hoodies"
                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                        android:textStyle="bold"/>

                    <com.example.daveexpress.utils.MSPRadioButton
                        android:id="@+id/rb_other_category"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
                        android:layout_weight="0.3"
                        android:background="@drawable/drawable_gender_tab_selector"
                        android:button="@null"
                        android:layout_gravity="bottom"

                        android:gravity="center"
                        android:text="@string/rb_lbl_other_category"
                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                        android:textStyle="bold"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_available_shoesizes"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_available_shoesizes"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_category">

                <com.example.daveexpress.utils.MSPEditText
                    android:id="@+id/et_available_shoesizes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_available_shirtsizes"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:hint="@string/et_hint_available_shirtsizes"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_category">

                <com.example.daveexpress.utils.MSPEditText
                    android:id="@+id/et_available_shirtsizes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.example.daveexpress.utils.MSPButton
                android:id="@+id/btn_submit_add_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_available_shoesizes" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>